<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Examen Parcial I</string>
    <string name="hello_world">Hello world!</string>

    <!-- Menu -->
    <string name="opcion1">Cargar toggle</string>
    <string name="opcion2">Cargar imagen</string>
    <string name="opcion3">Cargar nombre</string>

    <!-- Main activity -->
    <string name="btn4">Botón 4</string>
    <string name="btn3">Botón 3</string>
    <string name="btn2">Botón 2</string>
    <string name="btn1">Botón 1</string>
    
    <string name="lblNombre">Nombre container</string>
    <string name="lblApellido1">Apellido 1 container</string>
    <string name="lblApellido2">Apellido 2 container</string>
</resources>
