<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.examen.MainActivity" >

    <Button
        android:id="@+id/btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:onClick="mostrarData"
        android:text="@string/btn4" />

    <LinearLayout
        android:id="@+id/btnContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="cleanData"
            android:text="@string/btn1" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showReloj"
            android:text="@string/btn2" />

        <AnalogClock
            android:id="@+id/reloj"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginLeft="50dp"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/txtContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/lblNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="7dp"
            android:text="@string/lblNombre" />

        <TextView
            android:id="@+id/lblApellido1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="7dp"
            android:text="@string/lblApellido1" />

        <TextView
            android:id="@+id/lblApellido2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblApellido2" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/bntImg"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showImage"
            android:text="@string/btn3" />

        <ImageView
            android:id="@+id/img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="50dp"
            android:src="@drawable/ic_launcher"
            android:visibility="invisible" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ir al examen parcial II"
            android:id="@+id/btnParc2"
            android:onClick="goParcialII"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

</LinearLayout>